--- a/src/app/features/home/pages/home/home.html
+++ b/src/app/features/home/pages/home/home.html
@@ -10,7 +10,6 @@
         <app-search-bar placeholder="Pesquise por título ou nome do autor"></app-search-bar>
     </div>
     <div>
-        <app-topic-list 
-        ></app-topic-list>
+        <app-topic-list></app-topic-list>
     </div>
 </div>
