--- a/src/app/features/home/components/search-bar/search-bar.html
+++ b/src/app/features/home/components/search-bar/search-bar.html
@@ -1,3 +1,3 @@
 <mat-form-field appearance="outline">
-    <input matInput type="text" [placeholder]="this.placeholder()" [(ngModel)]="searchFieldValue" (keyup.enter)="enterPressed()" name="teste">
+    <input matInput type="text" [placeholder]="this.placeholder()" [(ngModel)]="searchFieldValue" (keyup.enter)="enterPressed()" name="search bar input field">
 </mat-form-field>
