Ajuste de tamanho e correção de bug

--- a/src/app/components/topbar/topbar.html
+++ b/src/app/components/topbar/topbar.html
@@ -1,8 +1,8 @@
 <mat-toolbar>
     <a routerLink="/">
-        <img src="assets/ONE.png" class="img_topbar" alt="logo"  width="100">
+        <img src="assets/ONE.png" class="img_topbar" alt="logo"  height="45">
     </a>
-    <a routerLink="/profile/:id">
-        <img src="assets/UserProfilePhoto.png" class="img_topbar" alt="profile_photo" width="60">
+    <a routerLink="profile/{{loggedUser}}">
+        <img src="assets/UserProfilePhoto.png" class="img_topbar" alt="profile_photo" height="40">
     </a>
 </mat-toolbar>
