chore(Topic): Atualizada entidade Topic e as referências para seus atributos

--- a/src/app/features/topics/components/topic-card/topic-card.html
+++ b/src/app/features/topics/components/topic-card/topic-card.html
@@ -25,10 +25,10 @@
 
   <div class="topic-footer">
     <div class="user-info">
-      <div class="avatar-text">{{ topic().user?.profile?.name }}</div>
+      <div class="avatar-text">{{ topic().author?.profile?.name }}</div>
 
       <div class="details">
-        <span class="name">{{ topic().user?.name }}</span>
+        <span class="name">{{ topic().author?.name }}</span>
 
         <div class="date">
           <mat-icon class="date-icon">calendar_today</mat-icon>
