--- a/src/app/features/topics/pages/topic-detail/topic-detail.html
+++ b/src/app/features/topics/pages/topic-detail/topic-detail.html
@@ -1,6 +1,6 @@
 <div class="container">
   <span>
-    <button matButton style="color: #0f172a">
+    <button matButton style="color: #0f172a" (click)="backToPreviousPage()">
       <mat-icon style="color: #0f172a">keyboard_backspace</mat-icon> Back to Questions
     </button>
   </span>
