feat(profile): unificação profile e public-profile, adição lista de tópicos ao public-profile

--- a/src/app/features/home/components/topic-list-card/topic-list-card.html
+++ b/src/app/features/home/components/topic-list-card/topic-list-card.html
@@ -11,6 +11,9 @@
         <mat-card-header>
             <mat-card-title>{{this.topic().title}}</mat-card-title>
         </mat-card-header>
+        <mat-card-content>
+            <div [innerHTML]="this.topic().content"></div>
+        </mat-card-content>
         <mat-card-footer>
             <div>
                 <mat-chip-set>
