--- a/src/app/features/profile/profile.html
+++ b/src/app/features/profile/profile.html
@@ -12,11 +12,11 @@
 
     <!--Atividades-->
     <mat-card>
-      <mat-card-header>Minha atividade</mat-card-header>
+      <mat-card-header>{{isOwnProfile() ? "Minha atividade" : "Atividade"}}</mat-card-header>
       <div class="activity">
         <mat-icon class="activity_icon topics">description</mat-icon>
         <div>
-          <span class="activity_title">Meus tópicos</span>
+          <span class="activity_title">{{isOwnProfile() ? "Meus tópicos" : "Tópicos"}}</span>
           <p class="activity_data">{{ user().topicCreatedCount }}</p>
         </div>
       </div>
@@ -24,7 +24,7 @@
       <div class="activity">
         <mat-icon class="activity_icon comment">comment</mat-icon>
         <div>
-          <span class="activity_title">Meus comentários</span>
+          <span class="activity_title">{{isOwnProfile() ? "Meus comentários" : "Comentários"}}</span>
           <p class="activity_data">{{ user().commentsCount }}</p>
         </div>
       </div>
@@ -39,124 +39,143 @@
     </mat-card>
   </section>
 
-  <section class="settings">
-    <!--Informações-->
-    <mat-card>
-      <div class="information_header">
-        <mat-card-header>Informações do perfil</mat-card-header>
-        @if (!isEditing() && isOwnProfile()) {
-        <button class="profile_button" (click)="toggleEdit()">
-          <mat-icon>edit</mat-icon>Editar
-        </button>
-        }
-      </div>
-
-      @if (isEditing() && isOwnProfile()) {
-      <form [formGroup]="profileForm" (ngSubmit)="saveProfile()">
-        <div class="avatar-section">
-          <label class="avatar-upload" for="avatar-input">
-            <input
-              id="avatar-input"
-              type="file"
-              accept="image/*"
-              (change)="onPhotoSelected($event)"
-              aria-label="Selecionar foto de perfil"
-            />
-
-            @if (photoPreview()) {
-            <img
-              [src]="photoPreview()"
-              class="avatar-image"
-              alt="Prévia da foto de perfil selecionada"
-            />
-            } @else {
-            <img [src]="user().profilePhoto" class="avatar-image" alt="Foto de perfil atual" />
-            }
-          </label>
-        </div>
-
-        <mat-form-field appearance="outline" class="full">
-          <mat-label>Nome de Usuário</mat-label>
-          <input matInput formControlName="name" autocomplete="name" required />
-          @if (profileForm.get('name')?.hasError('required') && profileForm.get('name')?.touched) {
-          <mat-error>O nome é obrigatório.</mat-error>
-          }
-        </mat-form-field>
-
-        <div class="form-actions">
-          <button type="button" class="profile_button" (click)="cancelEdit()">Cancelar</button>
-          <button type="submit" class="profile_button btn-primary" [disabled]="!profileForm.valid">
-            Salvar alterações
+  @if (isOwnProfile()) {
+    <section class="settings">
+      <!--Informações-->
+      <mat-card>
+        <div class="information_header">
+          <mat-card-header>Informações do perfil</mat-card-header>
+          @if (!isEditing() && isOwnProfile()) {
+          <button class="profile_button" (click)="toggleEdit()">
+            <mat-icon>edit</mat-icon>Editar
           </button>
+          }
         </div>
-      </form>
-      } @else {
-      <div class="information_body">
-        <span>Nome de Usuário</span>
-        <p class="information_data">{{ user().profileName }}</p>
-      </div>
-      }
-    </mat-card>
-
-    @if (isOwnProfile()) {
-    <!--Segurança-->
+  
+        @if (isEditing()) {
+        <form [formGroup]="profileForm" (ngSubmit)="saveProfile()">
+          <div class="avatar-section">
+            <label class="avatar-upload" for="avatar-input">
+              <input
+                id="avatar-input"
+                type="file"
+                accept="image/*"
+                (change)="onPhotoSelected($event)"
+                aria-label="Selecionar foto de perfil"
+              />
+  
+              @if (photoPreview()) {
+              <img
+                [src]="photoPreview()"
+                class="avatar-image"
+                alt="Prévia da foto de perfil selecionada"
+              />
+              } @else {
+              <img [src]="user().profilePhoto" class="avatar-image" alt="Foto de perfil atual" />
+              }
+            </label>
+          </div>
+  
+          <mat-form-field appearance="outline" class="full">
+            <mat-label>Nome de Usuário</mat-label>
+            <input matInput formControlName="name" autocomplete="name" required />
+            @if (profileForm.get('name')?.hasError('required') && profileForm.get('name')?.touched) {
+            <mat-error>O nome é obrigatório.</mat-error>
+            }
+          </mat-form-field>
+  
+          <div class="form-actions">
+            <button type="button" class="profile_button" (click)="cancelEdit()">Cancelar</button>
+            <button type="submit" class="profile_button btn-primary" [disabled]="!profileForm.valid">
+              Salvar alterações
+            </button>
+          </div>
+        </form>
+        } @else {
+        <div class="information_body">
+          <span>Nome de Usuário</span>
+          <p class="information_data">{{ user().profileName }}</p>
+        </div>
+        }
+      </mat-card>
+  
+      <!--Segurança-->
+      <mat-card>
+        <div class="header_icon">
+          <mat-icon class="activity_icon security">lock</mat-icon>
+          <div>
+            <mat-card-header>Segurança</mat-card-header>
+            <span class="details">Gerencie sua senha</span>
+          </div>
+        </div>
+        <button matButton="outlined" class="profile_button">Alterar Senha</button>
+      </mat-card>
+  
+      <!--Configurações-->
+      <mat-card>
+        <div class="header_icon">
+          <mat-icon class="activity_icon topics">settings</mat-icon>
+          <div>
+            <mat-card-header>Configurações gerais</mat-card-header>
+            <span class="details">Customise sua experiência</span>
+          </div>
+        </div>
+        <br />
+  
+        <div class="header_icon">
+          <mat-icon>notifications</mat-icon>
+          <p>Notificações</p>
+        </div>
+        <div class="config">
+          <div>
+            <p>Notificações no Navegador</p>
+            <span class="details">Receba notificações pelo seu navegador</span>
+          </div>
+          <mat-slide-toggle></mat-slide-toggle>
+        </div>
+  
+        <span class="details">Escolha seu tema preferido</span>
+  
+        <mat-divider></mat-divider>
+  
+        <div class="header_icon">
+          <mat-icon>language</mat-icon>
+          <p>Idioma</p>
+        </div>
+        <mat-form-field>
+          <mat-label>Idioma preferido</mat-label>
+          <mat-select value="Português(Brasil)">
+            <mat-option value="Português(Brasil)">Português(Brasil)</mat-option>
+            <mat-option value="Inglês">Inglês</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <span class="details">Escolha seu idioma preferido</span>
+      </mat-card>
+  
+      <!--Sair-->
+      <mat-card>
+        <mat-card-header>Sair do perfil</mat-card-header>
+        <button matButton="outlined" class="profile_button" (click)="this.logout()">Sair</button>
+      </mat-card>
+    </section>
+  }
+@else {
+  <section>
     <mat-card>
-      <div class="header_icon">
-        <mat-icon class="activity_icon security">lock</mat-icon>
-        <div>
-          <mat-card-header>Segurança</mat-card-header>
-          <span class="details">Gerencie sua senha</span>
-        </div>
-      </div>
-      <button matButton="outlined" class="profile_button">Alterar Senha</button>
+      <mat-card-header class="user-topics-header">
+        <mat-card-title>Tópicos deste usuário</mat-card-title>
+      </mat-card-header>
+      <mat-card-content>
+        <app-topic-list 
+          [totalElements]="userTopicsTotalElements()"
+          [statusFlag]="topicsStatusFlag()" 
+          [topics]="userTopics()"
+          [filtersCard]="false" 
+          [topActions]="false"
+          (paginationChange)="handlePaginationChange($event)"
+        ></app-topic-list>
+      </mat-card-content>
     </mat-card>
-
-    <!--Configurações-->
-    <mat-card>
-      <div class="header_icon">
-        <mat-icon class="activity_icon topics">settings</mat-icon>
-        <div>
-          <mat-card-header>Configurações gerais</mat-card-header>
-          <span class="details">Customise sua experiência</span>
-        </div>
-      </div>
-      <br />
-
-      <div class="header_icon">
-        <mat-icon>notifications</mat-icon>
-        <p>Notificações</p>
-      </div>
-      <div class="config">
-        <div>
-          <p>Notificações no Navegador</p>
-          <span class="details">Receba notificações pelo seu navegador</span>
-        </div>
-        <mat-slide-toggle></mat-slide-toggle>
-      </div>
-
-      <span class="details">Escolha seu tema preferido</span>
-
-      <mat-divider></mat-divider>
-
-      <div class="header_icon">
-        <mat-icon>language</mat-icon>
-        <p>Idioma</p>
-      </div>
-      <mat-form-field>
-        <mat-label>Idioma preferido</mat-label>
-        <mat-select value="Português(Brasil)">
-          <mat-option value="Português(Brasil)">Português(Brasil)</mat-option>
-          <mat-option value="Inglês">Inglês</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <span class="details">Escolha seu idioma preferido</span>
-    </mat-card>
-
-    <!--Sair-->
-    <mat-card>
-      <mat-card-header>Sair do perfil</mat-card-header>
-      <button matButton="outlined" class="profile_button">Sair</button>
-    </mat-card>
-    }
   </section>
+}
 </div>
